# intelebot

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
intelebot/: hooks.py  modules.txt
intelebot/config/: desktop.py  docs.py
intelebot/intelebot/bot_scripts/: send.py
intelebot/intelebot/doctype/bot_mapping/: bot_mapping.json  bot_mapping.py
intelebot/intelebot/doctype/bot_type/: bot_type.js  bot_type.json  bot_type.py  test_bot_type.py
intelebot/intelebot/doctype/customer_group_mapping/: customer_group_mapping.json  customer_group_mapping.py
intelebot/intelebot/doctype/multi_bot_type/: multi_bot_type.js  multi_bot_type.json  multi_bot_type.py  test_multi_bot_type.py
intelebot/intelebot/doctype/send_document/: send_document.js  send_document.json  send_document.py  test_send_document.py
intelebot/intelebot/doctype/telegram_bot/: telegram_bot.js  telegram_bot.json  telegram_bot.py  test_telegram_bot.py
intelebot/intelebot/doctype/telegram_chat/: telegram_chat.js  telegram_chat.json  telegram_chat.py  test_telegram_chat.py
intelebot/intelebot/doctype/telegram_group/: telegram_group.js  telegram_group.json  telegram_group.py  test_telegram_group.py
