[project]
name = "intelebot"
authors = [
    { name = "Aerele Technologies Private Limited", email = "hello@aerele.in"}
]
description = "Integration of telegram bots to frappe and ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "python-telegram-bot==13.13"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

